feature: create full responsive landing page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,3 +31,14 @@ body {
     text-wrap: balance;
   }
 }
+
+@keyframes slide {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(
+      -50%
+    ); /* Only move 50% of the doubled content to reset seamlessly */
+  }
+}
